<refactor> 패키지 골격 및 기존 소스 리팩토링

--- a/WhaleHunter/src/main/resources/application.properties
+++ b/WhaleHunter/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring:
+    profiles:
+        active: local
 
+server:
+    port: 8000
+
+binance
+    apiKey: API KEY
+    secretKey: SECRET KEY
