--- a/Track/src/main/resources/application-prod.yml
+++ b/Track/src/main/resources/application-prod.yml
@@ -9,28 +9,21 @@ spring:
             hibernate:
                 format_sql: true
                 use_sql_comments: true
-
     datasource:
         url: jdbc:mysql://localhost:3306/track?useSSL=false&serverTimezone=UTC
         username: root
         password: root
         driver-class-name: com.mysql.cj.jdbc.Driver
     profiles:
-        active: local
+        active: prod
 kafka:
-    topic:
-        input: trade_events
-        output: trade_data
+    InputTopic: trade_events
+    OutputTopic: trade_data
     servers: localhost:9091,localhost:9092,localhost:9093
     acks: all
-    extractor:
-        id: extractor
-    processor:
-        id: processor
+    extractor: extractor
+    processor:  processor
 server:
     port: 8000
-
 binance:
-    apiKey: KEY
-    secretKey: KEY
     token: KEY
