--- a/Track/src/main/resources/application.yml
+++ b/Track/src/main/resources/application.yml
@@ -9,7 +9,6 @@ spring:
             hibernate:
                 format_sql: true
                 use_sql_comments: true
-
     datasource:
         url: jdbc:mysql://localhost:3306/track?useSSL=false&serverTimezone=UTC
         username: root
@@ -18,19 +17,13 @@ spring:
     profiles:
         active: local
 kafka:
-    topic:
-        input: trade_events
-        output: trade_data
+    InputTopic: trade_events
+    OutputTopic: trade_data
     servers: localhost:9091,localhost:9092,localhost:9093
     acks: all
-    extractor:
-        id: extractor
-    processor:
-        id: processor
+    extractor: extractor
+    processor:  processor
 server:
     port: 8000
-
 binance:
-    apiKey: KEY
-    secretKey: KEY
     token: KEY
