:recycle: lombok yml 수정 및 빌드 테스트

--- a/Display/build.gradle
+++ b/Display/build.gradle
@@ -23,7 +23,8 @@ dependencies {
     implementation 'org.java-websocket:Java-WebSocket:1.5.3'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
     implementation group: 'org.apache.kafka', name: 'kafka-streams', version: '3.1.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.24'
