--- a/Track/build.gradle
+++ b/Track/build.gradle
@@ -26,7 +26,8 @@ dependencies {
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.10.0'
     implementation("net.openhft.com.binance.api:binance-api-client:2.17.1")
     implementation group: 'org.json', name: 'json', version: '20160810'
-    implementation 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation group: 'org.springframework.restdocs', name: 'spring-restdocs-mockmvc', version: '2.0.4.RELEASE'
     implementation 'mysql:mysql-connector-java:8.0.32'
