--- a/Message/build.gradle
+++ b/Message/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
     implementation 'org.telegram:telegrambots:6.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
