<feat> yml submodule 분리 시작

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 
+
+Message/.gradle/
+
+*.yml
+
+Track/.gradle/
+
+.idea/
+
+data/
+
+Display/.gradle/
+
+Gateway/.gradle/
+
+Gateway/gradle/
+
+Track/build/
