--- a/Gateway/build.gradle
+++ b/Gateway/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.api.JavaVersion
+
 plugins {
     id 'java'
     id 'war'
@@ -24,11 +26,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
-    implementation 'org.telegram:telegrambots:6.1.0'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'mysql:mysql-connector-java:8.0.32'
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.24'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:3.1.7'
+
 }
 
 targetCompatibility = JavaVersion.VERSION_11
