--- a/Gateway/build.gradle
+++ b/Gateway/build.gradle
@@ -1,4 +1,5 @@
 import org.gradle.api.JavaVersion
+import org.gradle.api.tasks.Copy
 
 plugins {
     id 'java'
@@ -13,6 +14,14 @@ version = '0.0.1-SNAPSHOT'
 java {
     sourceCompatibility = "11"
 }
+
+task copySecret(type: Copy) {
+    from file("${rootProject.projectDir.parent}/Whale-Hunter-Submodule/Gateway")
+    include "application*.yml"
+    into 'src/main/resources'
+}
+
+processResources.dependsOn('copySecret')
 
 repositories {
     mavenCentral()
