--- a/Track/build.gradle
+++ b/Track/build.gradle
@@ -12,14 +12,13 @@ java {
     sourceCompatibility = "11"
 }
 
-processResources.dependsOn('copySecret')
-
-tasks.register('copySecret', Copy) {
-    from 'Whale-Hunter-Submodule/Track'
-    include "application*.yml"  // 복사할 파일들
-    into 'src/main/resources'  // 복사 위치
+task copySecret(type: Copy) {
+    from file("${rootProject.projectDir.parent}/Whale-Hunter-Submodule/Track")
+    include "application*.yml"
+    into 'src/main/resources'
 }
 
+processResources.dependsOn('copySecret')
 
 repositories {
     mavenCentral()
