--- a/Gateway/build.gradle
+++ b/Gateway/build.gradle
@@ -1,6 +1,3 @@
-import org.gradle.api.JavaVersion
-import org.gradle.api.tasks.Copy
-
 plugins {
     id 'java'
     id 'war'
@@ -30,15 +27,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
-    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.24'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:3.1.7'
-
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway:3.1.7'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.7'
 }
 
 targetCompatibility = JavaVersion.VERSION_11
