--- a/Track/build.gradle
+++ b/Track/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.7'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.7'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-loadbalancer
+    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer:3.1.7'
 }
 
 targetCompatibility = JavaVersion.VERSION_11
