:sparkles: : 게이트웨이 Slueth 로그 추적 추가

--- a/Gateway/build.gradle
+++ b/Gateway/build.gradle
@@ -29,7 +29,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.0'
     implementation 'io.github.resilience4j:resilience4j-spring-boot2:1.7.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok:1.18.20'
