--- a/Gateway/build.gradle
+++ b/Gateway/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.0'
+    implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.1.0'
     implementation 'io.github.resilience4j:resilience4j-spring-boot2:1.7.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok:1.18.20'
