--- a/Display/build.gradle
+++ b/Display/build.gradle
@@ -30,12 +30,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.0'
-    implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.1.0'
     implementation 'io.github.resilience4j:resilience4j-spring-boot2:1.7.1'
     implementation 'org.java-websocket:Java-WebSocket:1.5.3'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'io.micrometer:micrometer-core:1.10.6'
+    implementation 'io.micrometer:micrometer-registry-prometheus:1.10.6'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     implementation group: 'org.apache.kafka', name: 'kafka-streams', version: '3.1.0'
