--- a/Message/build.gradle
+++ b/Message/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'mysql:mysql-connector-java:8.0.32'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.7'
+    implementation 'org.springframework.kafka:spring-kafka'
 }
 
 targetCompatibility = JavaVersion.VERSION_11
