--- a/Track/build.gradle
+++ b/Track/build.gradle
@@ -27,41 +27,37 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-aop'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.0'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation 'io.github.openfeign:feign-jackson:9.3.1'
+    implementation 'io.github.resilience4j:resilience4j-spring-boot2:1.7.1'
     implementation 'io.micrometer:micrometer-core:1.10.6'
     implementation 'io.micrometer:micrometer-registry-prometheus:1.10.6'
-    implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.1.0'
     implementation 'io.github.resilience4j:resilience4j-spring-boot2:1.7.1'
-    // https://mvnrepository.com/artifact/io.github.openfeign/feign-jackson
-    implementation 'io.github.openfeign:feign-jackson:9.3.1'
-    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
-    implementation 'org.springframework.boot:spring-boot-starter-cache'
-    implementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.10.0'
-    implementation("net.openhft.com.binance.api:binance-api-client:2.17.1")
-    implementation group: 'org.json', name: 'json', version: '20160810'
-    compileOnly 'org.projectlombok:lombok:1.18.20'
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation group: 'org.springframework.restdocs', name: 'spring-restdocs-mockmvc', version: '2.0.4.RELEASE'
     implementation 'mysql:mysql-connector-java:8.0.32'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.14.2'
-    implementation 'com.google.code.findbugs:jsr305:3.0.2'
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
-    implementation 'org.springframework.kafka:spring-kafka'
-    implementation group: 'org.java-websocket', name: 'Java-WebSocket', version: '1.5.4'
-    implementation 'org.java-websocket:Java-WebSocket:1.5.3'
+    implementation 'net.openhft.com.binance.api:binance-api-client:2.17.1'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'org.apache.kafka:kafka-streams:3.1.2'
-    implementation group: 'org.glassfish.tyrus', name: 'tyrus-client', version: '1.15'
-    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+    implementation 'org.glassfish.tyrus:tyrus-client:1.15'
+    implementation 'org.java-websocket:Java-WebSocket:1.5.4'
+    implementation 'org.json:json:20160810'
+    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer:3.1.7'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.7'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.7'
-    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer:3.1.7'
+    implementation 'org.springframework.kafka:spring-kafka'
 }
 
 targetCompatibility = JavaVersion.VERSION_11
