--- a/Message/build.gradle
+++ b/Message/build.gradle
@@ -26,9 +26,15 @@ repositories {
     maven { url 'https://repo.spring.io/snapshot' }
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     compileOnly 'org.projectlombok:lombok:1.18.20'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     implementation 'org.telegram:telegrambots:6.1.0'
     implementation 'io.github.resilience4j:resilience4j-spring-boot2:1.7.1'
     implementation 'io.micrometer:micrometer-core:1.10.6'
