--- a/Track/build.gradle
+++ b/Track/build.gradle
@@ -26,9 +26,15 @@ repositories {
     maven { url 'https://repo.spring.io/snapshot' }
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     compileOnly 'org.projectlombok:lombok:1.18.20'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
