--- a/Message/build.gradle
+++ b/Message/build.gradle
@@ -33,8 +33,9 @@ test {
 dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     compileOnly 'org.projectlombok:lombok:1.18.20'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.platform:junit-platform-engine:1.10.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
     implementation 'org.telegram:telegrambots:6.1.0'
     implementation 'io.github.resilience4j:resilience4j-spring-boot2:1.7.1'
     implementation 'io.micrometer:micrometer-core:1.10.6'
