--- a/Track/build.gradle
+++ b/Track/build.gradle
@@ -26,15 +26,12 @@ repositories {
     maven { url 'https://repo.spring.io/snapshot' }
 }
 
-test {
-    useJUnitPlatform()
-}
-
 dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
+    testImplementation 'org.mockito:mockito-core:4.5.1'
     compileOnly 'org.projectlombok:lombok:1.18.20'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
@@ -54,7 +51,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-tomcat'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
