--- a/Track/build.gradle
+++ b/Track/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation  'org.springframework:spring-webmvc:5.3.20'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer:3.1.7'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.7'
