--- a/Message/build.gradle
+++ b/Message/build.gradle
@@ -8,6 +8,10 @@ plugins {
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
+ext {
+    set('springCloudVersion', "2021.0.5")
+}
+
 java {
     sourceCompatibility = "11"
 }
@@ -48,8 +52,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.1.0'
-    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.0'
+    implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.1.8'
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.8'
     implementation 'org.springframework.kafka:spring-kafka'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
