--- a/Track/Dockerfile
+++ b/Track/Dockerfile
@@ -1,4 +1,4 @@
 FROM adoptopenjdk:11-jre-hotspot
 WORKDIR /app
-COPY build/libs/*.war app.war
+COPY build/libs/*.war /app/app.war
 CMD ["java", "-jar", "app.war"]
