--- a/Track/build.gradle
+++ b/Track/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
     testImplementation 'org.mockito:mockito-core:4.5.1'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
